<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/deckNameLayout"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="0">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deckNameLabel"
            android:layout_weight="1"
            android:textStyle="normal|bold"
            android:textSize="24sp" />
        <EditText
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/deckName"
            />
    </LinearLayout>

    <Button
        android:id="@+id/new_Word"
        android:text="@string/createNewWord"
        style="@style/BigButtonStyle" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/new_word_fragment"
        android:visibility="gone">
    </FrameLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        style="@style/wordRecyclerViewStyle"
        android:layout_weight="1" />

    <Button
        android:id="@+id/createDeck"
        android:text="@string/saveDeck"
        style="@style/BigButtonStyle" />


</LinearLayout>




