<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/deckCard"
        android:layout_margin="16dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_gravity="center">

    <LinearLayout
        style="@style/textLayout"
        android:id="@+id/wordLayout">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wordLabel"
            android:textSize="18sp"
            android:layout_weight="1"
            android:textStyle="normal|bold" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_weight="1"
            android:id="@+id/wordInput" />
    </LinearLayout>

    <LinearLayout
        style="@style/textLayout"
        android:layout_below="@id/wordLayout"
        android:id="@+id/translationLayout">
        <TextView
            android:id="@+id/translation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/translationInputLabel"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textStyle="normal|bold" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/translationInput"
            android:textSize="18sp"
            android:layout_weight="1" />
    </LinearLayout>

    <Button
        android:id="@+id/addWord"
        android:text="@string/createWord"
        style="@style/BigButtonStyle"
        android:layout_below="@id/translationLayout">
    </Button>

</RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>